<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dash"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/nav_dash" />
        <item
            android:id="@+id/nav_fields"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_fields" />
        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_tractor_2"
            android:title="@string/nav_equipment" />
        <item
            android:id="@+id/nav_inputs"
            android:icon="@drawable/ic_input"
            android:title="@string/nav_inputs" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_employees" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/nav_activities" />
    </group>

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_company_info"
                android:icon="@drawable/ic_work_black_24dp"
                android:title="@string/nav_company_info" />
        </menu>

    </item>
</menu>
