<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.licence.serban.farmcompanion.activities.RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10sp"
                android:text="@string/app_name"
                android:textSize="30sp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/anotherTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:text="@string/sign_up"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/registerToLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:text="@string/existing_account"
                    android:textAllCaps="false"
                    android:textSize="12sp" />
            </RelativeLayout>


            <EditText
                android:id="@+id/registerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/registerCompanyNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/company_name" />

            <EditText
                android:id="@+id/registerCountryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/country" />

            <EditText
                android:id="@+id/registerCityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/registerZipCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/zip_code" />

            <EditText
                android:id="@+id/registerEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/email_sample"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registerConfirmEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/confirm_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registerConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="12"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/required_hint"
                android:textColor="@color/colorError"
                android:textSize="12sp" />

            <Button
                android:id="@+id/registerSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
