<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".misc.fragments.CompanyInfoFragment">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoCompanyNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/company_name"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoCountryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/country"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoAdminAreaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/amin_area"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoSubAdminArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/subadmin_area"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoLocalityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/locality"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoSubLocalityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/sublocality"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoZipCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/zip_code"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyInfoAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="12"
            android:enabled="false"
            android:hint="@string/full_address"/>
      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/companyInfoOpenPickPlaceDialogButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/pick_address"
          android:visibility="gone"/>

      <Button
          android:id="@+id/companyInfoSaveButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/edit_button"/>

    </LinearLayout>
  </ScrollView>

</FrameLayout>
